// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pieChart > renders correctly when legend is focused 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj2"
      style="--_6tpqrj0: 206px;"
    >
      <div
        class="styles__6tpqrj3"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__6tpqrj9"
      >
        <ul
          class="styles__6tpqrj6"
        >
          <div
            aria-controls="_r_1l_"
            aria-describedby="_r_1l_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7 styles_isFocused_true__6tpqrj8"
              data-testid="chart-legend-compute"
            >
              <span
                class="styles__6tpqrjb"
                color="#5e47be"
                id="chart-legend-compute"
                style="--_6tpqrj1: #5e47be;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Compute
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_1o_"
            aria-describedby="_r_1o_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-gpu"
            >
              <span
                class="styles__6tpqrjb"
                color="#0083e6"
                id="chart-legend-gpu"
                style="--_6tpqrj1: #0083e6;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                GPU Instances
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly when legend is hovered 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj2"
      style="--_6tpqrj0: 206px;"
    >
      <div
        class="styles__6tpqrj3"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__6tpqrj9"
      >
        <ul
          class="styles__6tpqrj6"
        >
          <div
            aria-controls="_r_1f_"
            aria-describedby="_r_1f_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7 styles_isFocused_true__6tpqrj8"
              data-testid="chart-legend-compute"
            >
              <span
                class="styles__6tpqrjb"
                color="#5e47be"
                id="chart-legend-compute"
                style="--_6tpqrj1: #5e47be;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Compute
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_1i_"
            aria-describedby="_r_1i_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-gpu"
            >
              <span
                class="styles__6tpqrjb"
                color="#0083e6"
                id="chart-legend-gpu"
                style="--_6tpqrj1: #0083e6;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                GPU Instances
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj2"
      style="--_6tpqrj0: 206px;"
    >
      <div
        class="styles__6tpqrj3"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with data and content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj2"
      style="--_6tpqrj0: 206px;"
    >
      <div
        class="styles__6tpqrj3"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="styles__6tpqrj5"
        >
          Test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with detailed legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj2"
      style="--_6tpqrj0: 206px;"
    >
      <div
        class="styles__6tpqrj3"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__6tpqrj9"
      >
        <ul
          class="styles__6tpqrj6"
        >
          <div
            aria-controls="_r_u_"
            aria-describedby="_r_u_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-compute"
            >
              <span
                class="styles__6tpqrjb"
                color="#5e47be"
                id="chart-legend-compute"
                style="--_6tpqrj1: #5e47be;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Compute
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_11_"
            aria-describedby="_r_11_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-gpu"
            >
              <span
                class="styles__6tpqrjb"
                color="#0083e6"
                id="chart-legend-gpu"
                style="--_6tpqrj1: #0083e6;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                GPU Instances
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with detailed legend and discount 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj2"
      style="--_6tpqrj0: 206px;"
    >
      <div
        class="styles__6tpqrj3"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.discount"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__6tpqrj9"
      >
        <ul
          class="styles__6tpqrj6"
        >
          <div
            aria-controls="_r_1b_"
            aria-describedby="_r_1b_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-discount"
            >
              <span
                class="styles__6tpqrjb"
                color="#5e47be"
                id="chart-legend-discount"
                style="--_6tpqrj1: #5e47be;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                GPU Instances
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with empty legend placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj2"
      style="--_6tpqrj0: 206px;"
    >
      <div
        class="styles__6tpqrj3"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.empty"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <p
        class="styles__6tpqrj4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
      >
        I am a legend
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj2"
      style="--_6tpqrj0: 206px;"
    >
      <div
        class="styles__6tpqrj3"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,53.82,-75.845L42.886,-60.796A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M55.501,-74.623A93,93,0,0,1,88.122,-29.725L70.431,-23.977A74.4,74.4,0,0,0,44.568,-59.574Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
                <path
                  d="M88.764,-27.748A93,93,0,0,1,88.764,27.748L71.073,22A74.4,74.4,0,0,0,71.073,-22Z"
                  data-testid="arc.functions"
                  fill="#3ebd8f"
                  opacity="1"
                  stroke="rgb(43, 132, 100)"
                  stroke-width="0"
                />
                <path
                  d="M88.122,29.725A93,93,0,0,1,55.501,74.623L44.568,59.574A74.4,74.4,0,0,0,70.431,23.977Z"
                  data-testid="arc.containers"
                  fill="#ac2740"
                  opacity="1"
                  stroke="rgb(120, 27, 45)"
                  stroke-width="0"
                />
                <path
                  d="M53.82,75.845A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,42.886,60.796Z"
                  data-testid="arc.s3"
                  fill="#9a85ec"
                  opacity="1"
                  stroke="rgb(108, 93, 165)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-53.82,75.845L-42.886,60.796A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.dns"
                  fill="#ff602e"
                  opacity="1"
                  stroke="rgb(179, 67, 32)"
                  stroke-width="0"
                />
                <path
                  d="M-55.501,74.623A93,93,0,0,1,-88.122,29.725L-70.431,23.977A74.4,74.4,0,0,0,-44.568,59.574Z"
                  data-testid="arc.appleSilicon"
                  fill="#483800"
                  opacity="1"
                  stroke="rgb(50, 39, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-88.764,27.748A93,93,0,0,1,-88.764,-27.748L-71.073,-22A74.4,74.4,0,0,0,-71.073,22Z"
                  data-testid="arc.baremetal"
                  fill="#02a5ad"
                  opacity="1"
                  stroke="rgb(1, 115, 121)"
                  stroke-width="0"
                />
                <path
                  d="M-88.122,-29.725A93,93,0,0,1,-55.501,-74.623L-44.568,-59.574A74.4,74.4,0,0,0,-70.431,-23.977Z"
                  data-testid="arc.database"
                  fill="#ffa488"
                  opacity="1"
                  stroke="rgb(179, 115, 95)"
                  stroke-width="0"
                />
                <path
                  d="M-53.82,-75.845A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-42.886,-60.796Z"
                  data-testid="arc.lb"
                  fill="#96edf2"
                  opacity="1"
                  stroke="rgb(105, 166, 169)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__6tpqrj9"
      >
        <ul
          class="styles__6tpqrj6"
        >
          <div
            aria-controls="_r_0_"
            aria-describedby="_r_0_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-compute"
            >
              <span
                class="styles__6tpqrjb"
                color="#5e47be"
                id="chart-legend-compute"
                style="--_6tpqrj1: #5e47be;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Compute
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_3_"
            aria-describedby="_r_3_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-gpu"
            >
              <span
                class="styles__6tpqrjb"
                color="#0083e6"
                id="chart-legend-gpu"
                style="--_6tpqrj1: #0083e6;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                GPU Instances
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_6_"
            aria-describedby="_r_6_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-functions"
            >
              <span
                class="styles__6tpqrjb"
                color="#3ebd8f"
                id="chart-legend-functions"
                style="--_6tpqrj1: #3ebd8f;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Serverless Functions
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_9_"
            aria-describedby="_r_9_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-containers"
            >
              <span
                class="styles__6tpqrjb"
                color="#ac2740"
                id="chart-legend-containers"
                style="--_6tpqrj1: #ac2740;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Serverless Containers
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_c_"
            aria-describedby="_r_c_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-s3"
            >
              <span
                class="styles__6tpqrjb"
                color="#9a85ec"
                id="chart-legend-s3"
                style="--_6tpqrj1: #9a85ec;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Object Storage
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_f_"
            aria-describedby="_r_f_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-dns"
            >
              <span
                class="styles__6tpqrjb"
                color="#ff602e"
                id="chart-legend-dns"
                style="--_6tpqrj1: #ff602e;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Domain zones
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_i_"
            aria-describedby="_r_i_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-appleSilicon"
            >
              <span
                class="styles__6tpqrjb"
                color="#483800"
                id="chart-legend-appleSilicon"
                style="--_6tpqrj1: #483800;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Apple Silicon
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_l_"
            aria-describedby="_r_l_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-baremetal"
            >
              <span
                class="styles__6tpqrjb"
                color="#02a5ad"
                id="chart-legend-baremetal"
                style="--_6tpqrj1: #02a5ad;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Baremetal
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_o_"
            aria-describedby="_r_o_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-database"
            >
              <span
                class="styles__6tpqrjb"
                color="#ffa488"
                id="chart-legend-database"
                style="--_6tpqrj1: #ffa488;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Database
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
          <div
            aria-controls="_r_r_"
            aria-describedby="_r_r_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <li
              class="styles__6tpqrj7"
              data-testid="chart-legend-lb"
            >
              <span
                class="styles__6tpqrjb"
                color="#96edf2"
                id="chart-legend-lb"
                style="--_6tpqrj1: #96edf2;"
              />
              <span
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                Load Balancer
              </span>
              <span
                class="styles__6tpqrje"
              />
              <span
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a"
              >
                20
              </span>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with no props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__6tpqrj2"
      style="--_6tpqrj0: 206px;"
    >
      <div
        class="styles__6tpqrj3"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.empty"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
